modified .gitignore file

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,9 @@ venv/*
 .idea/*
 # Byte-compiled / optimized / DLL files
 __pycache__/
+functional/__init__.py
+__init__.py
+__pycache__
 *.py[cod]
 *$py.class
 
